[project]
name = "research-agents"
version = "0.1.0"
description = "We are building research agents that will help us to write papers"
authors = [
    {name = "Aysel Dadasheva"}
]
requires-python = ">=3.11, <3.13"
dependencies = [
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain (>=1.2.18,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "tavily-python (>=0.7.24,<0.8.0)",
    "langchain-google-genai (>=4.2.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "research_agent", from = "src" }
]
